added logo animation erased fixed sizes needed before to play jquery animate

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -39,11 +39,12 @@
     <div class='container-fluid'>
     
         <a class='navbar-brand t-bright-yellow' href="{% url 'between_app:index' %}"  
-            style="font-family:'Edu AU VIC WA NT Hand',verdana,san-serif;">
+            style="font-family:'Edu AU VIC WA NT Hand',verdana,san-serif;" id="brand-text">
           <img
           src="{% static "between_app/favicon_io/favicon-32x32.png"%}"
           class="img-fluid rounded mb-2"
           alt=""
+          
         />  
           CreaTherapy v.β</a>
 
