--- a/dive_app/templates/dive_app/shadow/new_shadow.html
+++ b/dive_app/templates/dive_app/shadow/new_shadow.html
@@ -35,7 +35,7 @@ Shadow Entry
 {% endif %}
 
   <a href="{% url 'dive_app:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
-  <a href="{% url 'dive_app:index' %}" class="card-link">Back to Journaling</a>
+  <a href="{% url 'dive_app:index' %}" class="card-link">Back to Diver</a>
 
 </br></br>
 
