--- a/between_app/templates/between_app/cover.html
+++ b/between_app/templates/between_app/cover.html
@@ -30,8 +30,8 @@
     <!--Wellcomes the user and gives a test option-->
     <h1 class="t-bright-yellow" id="landing-text_1">Your Journey your Knowledge</h1>
     <p class="text-light" id="landing-text_2">
-      <i class="bi bi-brush-fill lead"></i> A creative and modular approach to psychotherapy.
-      <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">CreaTheory</a>
+      <i class="bi bi-brush-fill lead"></i> A creative and modular approach to psychotherapy.</br>
+      <i class="bi bi-book-fill"></i>  Read more about the theory: <a class="link fs-6" href="https://theory.crea-therapy.com/" target="_blank">CreaTheory</a>
       </p>
         <p class="lead">
           <a href="{% url 'between_app:profile_test' %}" class="btn btn-lg btn-primary fw-bold" id="landing-button">Take a Test</a>
