--- a/dive_app/templates/dive_app/assemble/edit_assemble.html
+++ b/dive_app/templates/dive_app/assemble/edit_assemble.html
@@ -18,7 +18,7 @@
 </form>
 </br>
 
-<a href="{% url 'dive_app:assembles_by_date' %}" class="card-link">Back to assemble list</a>
+<a href="{% url 'dive_app:assemble_by_date' %}" class="card-link">Back to assemble list</a>
 <a href="{% url 'dive_app:index' %}" class="card-link">Back to Dive</a>
 
 </div>
