--- a/between_app/templates/between_app/personal_style/profile_test_client.html
+++ b/between_app/templates/between_app/personal_style/profile_test_client.html
@@ -1,6 +1,6 @@
 {%extends 'between_app/_base.html'%}
 {% load django_bootstrap5 %}
-{% block title %}Profiles Test{% endblock title%}
+{% block title %}Profiles Test Client{% endblock title%}
 {% load url_utils %}
 
 {%block content%}
@@ -15,12 +15,12 @@
 </ul>
 <div class="card mt-3 mb-4 warm-white">
 
-  <div class="card-header display-6 bg-primary-subtle border-primary p-3">Profile Test</div>
+  <div class="card-header display-6 bg-primary-subtle border-primary p-3">Profile Test Client</div>
   
 <div class="card-body p-3">
-  <p>This is a little test to help you reflect about your preferred positions at the time of working with people.</p>
-  <p>It is composed of questions regarding your practice that add up to shape a profile. You can review previous tests and see your scores to have a more nuanced sense.</p>
-  <p>The idea is for it to be flexible, and for it to be representative of yourself. I hope it can help you as a mirror that keeps track of your process.</p>
+  <p>This is a little test to help you reflect about your preferred positions of care and other areas of life.</p>
+  <p>It is composed of questions regarding that add up to shape a profile connected with therapeutic traditions. You can review previous tests and see your scores to have a more nuanced sense.</p>
+  <p>The idea is for it to be flexible, and for it to be representative of yourself (let me know if it does not). I hope it can help you as a mirror that keeps track of your process.</p>
   <p>As a reference you can use the bellow numbers.</p>
     <ul>
       <li>Bellow 40% is disagreement</li>
@@ -33,7 +33,7 @@
   class="alert alert-info"
   role="alert"
 >
-  👉 This test aims to help you reflect on your practice. It does not have algorithms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
+  👉 This test aims to help you reflect on your positions. It does not have algorithms behind (only adds two sliders). You can come back and move the sliders to find what feels right.
 </div>
 
 <div class="card bg-light-sutble">
