--- a/between_app/templates/between_app/personal_style/profile_test_client.html
+++ b/between_app/templates/between_app/personal_style/profile_test_client.html
@@ -19,7 +19,8 @@
   
 <div class="card-body p-3">
   <p>This is a little test to help you reflect about your preferred positions of care and other areas of life.</p>
-  <p>It is composed of questions regarding that add up to shape a profile connected with therapeutic traditions. You can review previous tests and see your scores to have a more nuanced sense.</p>
+  <p>It is composed of questions regarding some preferences that add up to shape a profile connected with therapeutic traditions. It can help you find the type of therapist you may be looking for.</p>
+    <p>You can review previous tests and see your scores to have a more nuanced sense.</p>
   <p>The idea is for it to be flexible, and for it to be representative of yourself (let me know if it does not). I hope it can help you as a mirror that keeps track of your process.</p>
   <p>As a reference you can use the bellow numbers.</p>
     <ul>
