re wrote results text

--- a/between_app/templates/between_app/personal_style/results.html
+++ b/between_app/templates/between_app/personal_style/results.html
@@ -16,8 +16,8 @@
 
         <div class="card-body m-2"> <!-- intro -->
 <h3 class="card-title">Therapeutic Styles:</h3>
-<p class="card-text">It is a system of care and interest. We all move through positions and roles in life. Different cultures, families and our experience will make some areas more famiiliar.</p>
-<p class="card-text">Some areas will be more to the front, and others that may be behind or even rejected.</p>
+<p class="card-text">It is a system of care and interest, you can use it to see your own values and positions around therapy.</p>
+<p class="card-text">I do not see it as something that defines you, but as some prominent traits on a particular moment.</p>
 <p class="card-text">Use this as a tool to explore your attractions and rejections of different therapeutic approaches and see your own evolution.</p>
 <a class="link" href={% url 'between_app:style_detail' pk %}>Numeric Scores</a>
     </div>
