--- a/learning_logs/templates/learning_logs/question/create_Question.html
+++ b/learning_logs/templates/learning_logs/question/create_Question.html
@@ -19,9 +19,11 @@ New Question
 
 
   <div id='questionWidget'>
+    <div class="card p-2 my-2 border-primary bg-primary-subtle">
     <p class='card-text' id='textDisplay'><i>Get a question pressing bellow</i></p>
     {% bootstrap_button class='btn button-primary' id='getQuestion' onclick='printQuestion()' content='Get New Questions' %}    
     {% bootstrap_button class='btn button-primary' id='addTopic' onclick='inputQuestion()' content='Add as Title' %}
+    </div>
   </div>
     </div> 
   </div>
