new bottom nav design: Buttons for easy actions tooltips to explain what they do tooltip color dim so it merges

--- a/between_app/static/between_app/css/style.css
+++ b/between_app/static/between_app/css/style.css
@@ -38,3 +38,10 @@
 .posText {
     position:relative;
 }
+
+
+.custom-tooltip {
+    --bs-tooltip-bg: var(--bs-gray-900);
+    --bs-tooltip-color: var(--bs-gray-500);
+  }
+  
