--- a/learning_logs/templates/learning_logs/question/create_Question.html
+++ b/learning_logs/templates/learning_logs/question/create_Question.html
@@ -11,7 +11,7 @@ New Question
 
 <div class="card cold-white">
   <div class="card-header soft-blue">
-  <div class="card-title display-6">Create an After Session Entry:</div>
+  <div class="card-title display-6">Journal a Question:</div>
 </div>
 <div class="card-body">
   <p class="card-title fs-5"> Press the button to get an after session prompt.</p>
