changed bottom for underline

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -142,7 +142,7 @@
 </main>
 <footer>
     <nav class="nav bg-primary fixed-bottom">
-      <ul class="nav nav-justified justify-content-center nav nav-pills px-3">
+      <ul class="nav nav-justified justify-content-center nav nav-underline px-3">
             <li class="nav-item">
               <a class="nav-link fw-light link-secondary fs-3 {% if request.path == '/' %}active{% endif %}" 
               data-bs-toggle="tooltip" data-bs-title="Home"
